animation overflow fixed

--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ body{
     background-attachment: fixed;
   }
 .full-screen{
-  height: 100vh;
+  min-height: 100vh;
 
 }
 
